--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.18",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
